--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
     <header class="header">
         <div class="conteiner">
             <div class="header__inner">
-                <nav class="nav">
+                <nav class="nav" id="nav">
                     <div class="nav__logo">
                         <h1 class="nav__text">Smallapps</h1>
                     </div>
  
-                    <a href="#" class="nav__link">Home</a>
-                    <a href="#" class="nav__link">Features</a>
-                    <a href="#" class="nav__link">Screenshot</a>
-                    <a href="#" class="nav__link">Gallery</a>
+                    <a href="#" data-scroll="#home" class="nav__link">Home</a>
+                    <a href="#" data-scroll="#features" class="nav__link">Features</a>
+                    <a href="#" data-scroll="#screenshot" class="nav__link">Screenshot</a>
+                    <a href="#" data-scroll="#gallery" class="nav__link">Gallery</a>
 
 
                 </nav>
@@ -73,7 +73,7 @@
 
 
     <div class="intro__bg">
-        <div class="intro">
+        <div class="intro" id="home">
             <div class="conteiner">
                 <div class="intro__inner">
                     <h2 class="intro__title">Perfect app landing page</h2>
@@ -131,7 +131,7 @@
     <!-- Section -->
 
 
-<div class="section">
+<div class="section" id="features">
     <div class="conteiner">
         <div class="section__inner">
 
@@ -250,7 +250,7 @@
 
 <!-- Gallery -->
 
-<div class="gallery">
+<div class="gallery" id="screenshot">
 <div class="conteiner">
     <div class="gallery__inner">
         <div class="gallery__photo">
@@ -327,7 +327,7 @@
 
 
 
-<div class="contact">
+<div class="contact" id="gallery">
     <div class="conteiner">
         <div class="contact__inner">
             <h2 class="contact__title">
